# Renderer-DirectX12

./: CMakeLists.txt
D3D12Renderer/include/: D3D12Renderer.h
D3D12Renderer/src/: D3D12Renderer.cpp
D3DSpecifics/include/: D3D12ComInterface.h  D3D12DeviceResources.h  D3D12RenderResources.h  D3D12UploadBuffer.h  D3D12Utilities.h  D3D12ViewportConfig.h  D3D12WindowSwapChain.h  D3DException.h
D3DSpecifics/inl/: D3D12Utilities.inl
D3DSpecifics/src/: D3DException.cpp
cmake_config/: D3D12Renderer.pc.in  DirectX12Renderer_Config.cmake.in
cmake_config/presets/: MSVCWindowsPresets.json
include/: DirectX12Renderer.h
src/: DirectX12Renderer.cpp
